--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
 /* @font-face {
 	font-family: "Blogger-Light";
 	src: url("") format("truetype");
@@ -10,4 +17,4 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Blogger-Light";
-} */
+} */  
