--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,6 @@
 	src: url("") format("truetype");
 	font-style: normal;
 	font-weight: normal;
-<<<<<<< Updated upstream
-=======
 }*/ 
 
 html {
@@ -72,7 +70,6 @@ html {
   flex: 3;
   font-size: 18px;
   justify-content: end;
->>>>>>> Stashed changes
 }
 
 * {
@@ -80,4 +77,4 @@ html {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Blogger-Light";
-} */  
+} 
