--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,6 @@ html {
   margin-right: 5px;
 }
 
-
-
 #header div a {
 	text-decoration: none;
   align-items: center;
@@ -93,4 +91,36 @@ footer {
   color: #E5E7EB;
   padding: 25px 0;
   margin-top: 100px;
+}
+
+/* tablet portrait */
+
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .container {
+    width: 90%;
+  }
+}
+
+/* mobile portrait */
+
+@MEDIA screen and (max-device-width: 768px) {
+  .container {
+    width: 95%;
+  }
+
+  #logo {
+    height: 20px;
+  }
+
+  #header div a h1 {
+    font-size: 18px;
+  }
+
+  #header div ul {
+    font-size: 14px;
+  }
+
+  #header div ul li {
+    margin-left: 12px;
+  }
 }
