--- a/css/artists.css
+++ b/css/artists.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content:space-around;
-    margin-top: 200px;
+    margin-top: 100px;
     width: 80%;
     text-align: center;
 }
@@ -38,4 +38,39 @@ h2 {
     text-align: center;
     margin-bottom: 50px;
     color: #1F2937;
+}
+
+.more-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 75px;
+}
+.div-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-content: center;
+    background-color: #E5E7EB;
+    width: 60%;
+}
+h3 {
+    text-align: center;
+    margin: 5px;
+    color: #1F2937;
+    margin-bottom: 5px;
+    font-size: 24px;
+}
+a {
+    text-align: center;
+    color: #3882F6;
+    margin-top: 5px;
+    font-size: 16px;
+}
+p {
+    text-align: center;
+    color: #1F2937;
+    font-size: 18px;
+    line-height: 150%;
 }
