--- a/css/home.css
+++ b/css/home.css
@@ -29,7 +29,7 @@
 
 .hero-container {
   display: flex;
-  padding: 150px 0 100px 0;
+  padding: 100px 0;
 }
 
 .hero-container div {
@@ -40,7 +40,7 @@
   padding-right: 5%;
 }
 
-.hero-txt-area h2 {
+.hero-txt-area h1 {
   color: #f9faf8;
   font-size: 48px;
   font-weight: 900;
@@ -66,7 +66,7 @@
   text-align: center;
 }
 
-#information h3 {
+#information h2 {
   color: var(--darker-main-color);
   font-size: 36px;
   font-weight: bolder !important;
@@ -180,7 +180,7 @@
     flex: 0;
   }
 
-  .hero-txt-area h2 {
+  .hero-txt-area h1 {
     font-size: 30px;
   }
 
