--- a/css/artists.css
+++ b/css/artists.css
@@ -55,7 +55,7 @@ h2 {
     background-color: #E5E7EB;
     width: 60%;
 }
-h3 {
+strong {
     text-align: center;
     margin: 5px;
     color: #1F2937;
