--- a/css/paintings.css
+++ b/css/paintings.css
@@ -1,4 +1,6 @@
-
+#top {
+    visibility: hidden;
+}
 @media screen and (min-width: 841px) {
     .p-container {
         width: 90%;
@@ -106,6 +108,25 @@
     figcaption a:hover {
         color: rgb(33, 148, 182);
     }
+
+    /* ---------To the top---------- */
+    #to-top-btn {
+        position: fixed;
+        bottom: 5%;
+        left:3%;
+        opacity: 0.5;
+    }
+    #to-top-btn:hover {
+        opacity: 1;
+    }
+    #to-top-btn svg {
+        width: 35px;
+        height: 35px;
+        stroke: grey;
+    }
+    #to-top-btn:hover svg {
+        stroke: var(--darker-main-color);
+    }
 }
 @media screen and (max-width: 840px) {
     .p-container {
@@ -203,5 +224,24 @@
 
     figcaption a:hover {
         color: rgb(33, 148, 182);
+    }
+
+    /* ---------To the top---------- */
+    #to-top-btn {
+        position: fixed;
+        bottom: 5%;
+        left:3%;
+        opacity: 0.5;
+    }
+    #to-top-btn:hover {
+        opacity: 1;
+    }
+    #to-top-btn svg {
+        width: 40px;
+        height: 40px;
+        stroke: grey;
+    }
+    #to-top-btn:hover svg {
+        stroke: var(--darker-main-color);
     }
 }
