--- a/css/paintings.css
+++ b/css/paintings.css
@@ -8,7 +8,7 @@
         margin: 0 auto;
     }
 
-    section {
+    .contents {
         background-color: #1F2937;
         color: white;
         padding: 30px 0;
