--- a/css/artists.css
+++ b/css/artists.css
@@ -1,10 +1,8 @@
-/* Bigger */
 @media screen and (min-width: 841px) {
     .section-container {
         display: flex;
         justify-content: center;
     }
-    
     .div-container {
         display: flex;
         flex-direction: column;
@@ -13,14 +11,12 @@
         width: 80%;
         text-align: center;
     }
-    
     .container1 {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         row-gap: 30px;
     }
-    
     .container1 li {
         display: inline-flex;
         flex-direction: column;
@@ -29,7 +25,6 @@
         justify-content: flex-start;
         width: 25%;
     }
-    
     .artist-pictures {
         width: 50%;
         height: auto;
@@ -44,7 +39,6 @@
         margin-bottom: 50px;
         color: #1F2937;
     }
-    
     .more-info {
         display: flex;
         flex-direction: column;
@@ -61,7 +55,7 @@
         padding: 60px 40px 0 40px;
         width: 70%;
     }
-    strong {
+    .div-info strong {
         text-align: center;
         margin: 5px;
         color: #1F2937;
@@ -80,14 +74,32 @@
         font-size: 18px;
         line-height: 150%;
     }
+    #to-top-btn {
+        position: fixed;
+        bottom: 5%;
+        left:3%;
+        opacity: 0.5;
+    }
+    #to-top-btn:hover {
+        opacity: 1;
+    }
+    #to-top-btn svg {
+        width: 35px;
+        height: 35px;
+        stroke: grey;
+        fill:grey;
+    }
+    #to-top-btn:hover svg {
+        stroke: var(--darker-main-color);
+        stroke: var(--darker-main-color);
+    }
 }
-/* Smaller */
+
 @media screen and (max-width: 840px) {
     .section-container {
         display: flex;
         justify-content: center;
     }
-    
     .div-container {
         display: flex;
         flex-direction: column;
@@ -96,23 +108,20 @@
         width: 80%;
         text-align: center;
     }
-    
     .container1 {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         row-gap: 30px;
     }
-    
     .container1 li {
         display: inline-flex;
         flex-direction: column;
         text-align: center;
         align-items: center;
         justify-content: flex-start;
-        width: 25%;
+        width: 50%;
     }
-    
     .artist-pictures {
         width: 50%;
         height: auto;
@@ -127,7 +136,6 @@
         margin-bottom: 50px;
         color: #1F2937;
     }
-    
     .more-info {
         display: flex;
         flex-direction: column;
@@ -144,11 +152,11 @@
         padding: 60px 40px 0 40px;
         width: 90%;
     }
-    strong {
+    .div-info strong {
         text-align: center;
         margin: 5px;
         color: #1F2937;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
         font-size: 24px;
     }
     a {
@@ -162,5 +170,24 @@
         color: #1F2937;
         font-size: 18px;
         line-height: 150%;
+    }
+    #to-top-btn {
+        position: fixed;
+        bottom: 5%;
+        left:3%;
+        opacity: 0.5;
+    }
+    #to-top-btn:hover {
+        opacity: 1;
+    }
+    #to-top-btn svg {
+        width: 35px;
+        height: 35px;
+        stroke: grey;
+        fill:grey;
+    }
+    #to-top-btn:hover svg {
+        stroke: var(--darker-main-color);
+        stroke: var(--darker-main-color);
     }
 }
