--- a/css/home.css
+++ b/css/home.css
@@ -14,7 +14,7 @@
   font-weight: 900;
   margin-top: 15px;
   padding: 6px 25px;
-  transition-duration: 2s;
+  transition-duration: .5s;
 }
 
 .sign-up-btn:hover {
