--- a/css/artists.css
+++ b/css/artists.css
@@ -32,7 +32,7 @@
         padding: 5px;
         overflow: hidden;
     }
-    h2 {
+    #artists h2 {
         font-size: 36px;
         font-weight: bolder !important;
         text-align: center;
@@ -62,7 +62,7 @@
         margin-bottom: 5px;
         font-size: 24px;
     }
-    a {
+    #artists a {
         text-align: center;
         color: #3882F6;
         margin-top: 5px;
@@ -114,7 +114,7 @@
         flex-wrap: wrap;
         row-gap: 30px;
     }
-    .container1 li {
+    #artists li {
         display: inline-flex;
         flex-direction: column;
         text-align: center;
@@ -129,7 +129,7 @@
         padding: 5px;
         overflow: hidden;
     }
-    h2 {
+    #artists h2 {
         font-size: 36px;
         font-weight: bolder !important;
         text-align: center;
@@ -159,7 +159,7 @@
         margin-bottom: 15px;
         font-size: 24px;
     }
-    a {
+    #artists a {
         text-align: center;
         color: #3882F6;
         margin-top: 5px;
