--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@ footer {
 @media screen and (min-width: 841px) {
   .container {
     width: 70%;
+    height: 100%;
     margin: 0 auto;
   }
 
@@ -118,6 +119,7 @@ footer {
 @media screen and (max-width: 840px) {
   .container {
     width: 95%;
+    height: 100%;
     margin: 0 auto;
   }
   
