--- a/css/paintings.css
+++ b/css/paintings.css
@@ -1,10 +1,4 @@
 @media screen and (min-width: 841px) {
-    .p-container {
-        width: 80%;
-        height: 100%;
-        margin: 0 auto;
-    }
-
     .contents {
         background-color: #1F2937;
         color: white;
@@ -23,8 +17,8 @@
     .p-contents {
         display: flex;
         flex-direction: row;
-        column-gap: 100px;
-        padding: 10px;
+        column-gap: 50px;
+        padding: 10px 0;
         border-top: 1px dotted white;
     }
 
@@ -128,12 +122,6 @@
     }
 }
 @media screen and (max-width: 840px) {
-    .p-container {
-        width: 96%;
-        height: 100%;
-        margin: 0 auto;
-    }
-
     .contents {
         background-color: #1F2937;
         color: white;
@@ -153,7 +141,7 @@
         display: flex;
         flex-direction: column;
         column-gap: 100px;
-        padding: 10px;
+        padding: 10px 0;
         border-top: 1px dotted white;
     }
 
