--- a/css/artists.css
+++ b/css/artists.css
@@ -22,8 +22,7 @@
         flex-direction: column;
         text-align: center;
         align-items: center;
-        justify-content: flex-start;
-        width: 25%;
+        width: 20%;
     }
     .artist-pictures {
         width: 50%;
@@ -52,7 +51,7 @@
         text-align: center;
         align-content: center;
         background-color: #E5E7EB;
-        padding: 60px 40px 0 40px;
+        padding: 60px 40px 30px 40px;
         width: 70%;
     }
     .div-info strong {
@@ -73,6 +72,7 @@
         color: #1F2937;
         font-size: 18px;
         line-height: 150%;
+        padding: 0 0 7px 0;
     }
     #to-top-btn {
         position: fixed;
@@ -119,7 +119,6 @@
         flex-direction: column;
         text-align: center;
         align-items: center;
-        justify-content: flex-start;
         width: 50%;
     }
     .artist-pictures {
@@ -149,7 +148,7 @@
         text-align: center;
         align-content: center;
         background-color: #E5E7EB;
-        padding: 60px 40px 0 40px;
+        padding: 60px 40px 30px 40px;
         width: 90%;
     }
     .div-info strong {
@@ -170,6 +169,7 @@
         color: #1F2937;
         font-size: 18px;
         line-height: 150%;
+        padding: 0 0 7px 0;
     }
     #to-top-btn {
         position: fixed;
