--- a/css/home.css
+++ b/css/home.css
@@ -6,9 +6,9 @@
 .sign-up-btn {
   background-image: linear-gradient(45deg, #3882F6 60%, #5a7cb3, #566277);
   background-position: left;
-  border-radius: 7px;
   background-size: 500%;
   border: none;
+  border-radius: 7px;
   color: white;
   cursor: pointer;
   font-weight: 900;
@@ -46,9 +46,9 @@ a {
 }
 
 .hero-container div img {
-  width: 100%;
-  min-width: 200px;
   box-shadow: 5px 5px 10px black;
+  min-width: 200px;
+  width: 100%;
 }
 
 /* Information */
@@ -62,15 +62,15 @@ a {
 #information h2 {
   color: var(--darker-main-color);
   font-size: 36px;
-  font-weight: bolder !important;
+  font-weight: bolder;
 }
 
 #information ul li {
   align-items: center;
   display: flex;
   flex-direction: column;
-  text-align: center;
   justify-content: start;
+  text-align: center;
 }
 
 #information ul li img {
@@ -271,7 +271,7 @@ a {
     flex-direction: column;
     justify-content: space-evenly;
     padding: 40px 20px;
-    width: 95%;
     text-align: center;
+    width: 95%;
   }
 }
